# ansible-for-splunk-cloud

./: .gitignore  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  UNCOMMITTED_CHANGES.md  ansible.cfg  cloud_ddss_storage.yml  cloud_egress_allow.yml  cloud_full_deploy.yml  cloud_hec_token_config.yml  cloud_index_config.yml  cloud_ingress_allow.yml  cloud_limits_conf.yml  cloud_lookup_upload.yml  cloud_maintenance_window.yml  cloud_privateapp_install.yml  cloud_role_config.yml  cloud_savedsearch_enable.yml  cloud_splunkbaseapp_install.yml  cloud_status_check.yml  cloud_user_config.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ansible-playbook.yml  check-status.yml  deploy-ddss-storage.yml  deploy-egress-config.yml  deploy-hec-token.yml  deploy-index-config.yml  deploy-ingress-config.yml  deploy-limits-conf.yml  deploy-lookup-upload.yml  deploy-maintenance-window.yml  deploy-private-apps.yml  deploy-restart.yml  deploy-role-config.yml  deploy-savedsearch-enable.yml  deploy-splunkbase-apps.yml  deploy-user-config.yml  full-deploy.yml
apps/TA-splk-conf2023/default/: app.conf  savedsearches.conf
inventory/: inventory.yml
inventory/group_vars/: splunkcloud.yml
inventory/group_vars/splunkcloud/: ddss_storage.yml  egress_allowlist.yml  hec_tokens.yml  index_config.yml  ingress_allowlist.yml  limits_conf.yml  maintenance_window.yml  private_apps.yml  rbac_roles.yml  rbac_users.yml  splunkbase_apps.yml  vars.yml
inventory/host_vars/prod/: ingress_allowlist.yml  private_apps.yml  splunkbase_apps.yml  vars.yml
(+65 files in other folders)
