[tool.poetry]
name = "ansible-for-splunk-cloud"
version = "0.1.0"
description = ""
authors = ["livehybrid <will@livehybrid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.15"
splunk-appinspect = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
